--- a/Application/aspnet-core-dotnet-core/Pages/Index.cshtml
+++ b/Application/aspnet-core-dotnet-core/Pages/Index.cshtml
@@ -15,7 +15,7 @@
             </a>
         </div>
         <div class="content-body">
-            <div class="success-text">Hi Pete! Containerized WebApp</div>
+            <div class="success-text">Hi Randy! Containerized WebApp</div>
             <div class="description line-1"> GitHub Workflow has been successfully setup</div>
             <div class="description line-2"> My 1st containerized WebApp .Net Core app is up and running on Azure</div>
         </div>
