Added Ping Test

--- a/Application/AspNetWebApp.Web/Views/Shared/_Layout.cshtml
+++ b/Application/AspNetWebApp.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - &nbsp;AspNetWebApp .Net 6 is powered by @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription &nbsp;&nbsp; | &nbsp;&nbsp; <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></span></div>
+            &copy; @DateTime.Now.Year - &nbsp;AspNetWebApp is powered by @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription &nbsp;&nbsp; | &nbsp;&nbsp; <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></span></div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
